--- a/src/main/resources/com/matteotocci/app/PaginaProfilo.fxml
+++ b/src/main/resources/com/matteotocci/app/PaginaProfilo.fxml
@@ -27,7 +27,7 @@
                         <Label fx:id="nomeUtenteSidebarLabel" style="-fx-padding: 0 0 0 10; -fx-font-size: 14px;" text="Nome Utente" />
                     </children>
                 </HBox>
-                <Button fx:id="homePageButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="60.0" style="-fx-cursor: hand;" text="Home Page" onAction="#vaiAllaHomePage" />
+                <Button fx:id="homePageButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#vaiAllaHomePage" prefHeight="60.0" style="-fx-cursor: hand;" text="Home Page" />
                 <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="65.0" style="-fx-cursor: hand;" text="Ricette" />
                 <Button fx:id="BottoneAlimenti1" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="70.0" style="-fx-cursor: hand;" text="Piano alimentare" />
                 <Button fx:id="BottoneAlimenti" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="70.0" style="-fx-cursor: hand;" text="Alimenti" />
@@ -52,7 +52,19 @@
                 </HBox>
                 <VBox spacing="15.0" VBox.vgrow="ALWAYS">
                     <children>
-                        <Label style="-fx-text-fill: #2196F3; -fx-underline: true; -fx-font-size: 16px; -fx-font-weight: bold;" text="Modifica il tuo profilo" />
+                  <GridPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="439.20001220703125" minWidth="10.0" prefWidth="439.20001220703125" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="334.4000244140625" minWidth="10.0" prefWidth="240.79998779296875" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                              <Label style="-fx-text-fill: #2196F3; -fx-underline: true; -fx-font-size: 16px; -fx-font-weight: bold;" text="Modifica il tuo profilo" />
+                        <Label onMouseClicked="#mostraBMI" style="-fx-text-fill: #2196F3; -fx-underline: true; -fx-font-size: 16px; -fx-font-weight: bold;" text="Le mie statistiche " GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
                         <GridPane fx:id="gridPane" hgap="8.0" vgap="8.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="100.0" prefWidth="100.0" />
@@ -71,14 +83,10 @@
                                 <TextField fx:id="altezzaTextField" editable="false" prefHeight="28.0" promptText="Inserisci l'altezza in cm" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Peso Attuale (kg):" GridPane.rowIndex="5" />
                                 <TextField fx:id="pesoAttualeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il peso attuale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Peso Ideale (kg):" GridPane.rowIndex="6" />
-                                <TextField fx:id="pesoIdealeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il peso ideale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Dieta:" GridPane.rowIndex="7" />
-                                <TextField fx:id="dietaTextField" editable="false" prefHeight="28.0" promptText="Inserisci il nome della dieta" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Livello attività:" GridPane.rowIndex="8" />
-                                <TextField fx:id="livelloAttivitaTextField" editable="false" prefHeight="28.0" promptText="Inserisci il tuo tipo di attività" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Nutrizionista:" GridPane.rowIndex="9" />
-                                <TextField fx:id="nutrizionistaTextField" editable="false" prefHeight="28.0" promptText="Scegli il tuo nutrizionista" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Livello attività:" GridPane.rowIndex="6" />
+                                <TextField fx:id="livelloAttivitaTextField" editable="false" prefHeight="28.0" promptText="Inserisci il tuo tipo di attività" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Nutrizionista:" GridPane.rowIndex="7" />
+                                <TextField fx:id="nutrizionistaTextField" editable="false" prefHeight="28.0" promptText="Scegli il tuo nutrizionista" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                             </children>
                             <padding>
                                 <Insets bottom="10.0" top="8.0" />
@@ -92,14 +100,12 @@
                                 <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                         </GridPane>
                         <Label onMouseClicked="#mostraSchermataModificaPassword" style="-fx-text-fill: #007bff; -fx-underline: true; -fx-font-size: 14px; -fx-cursor: hand;" text="Modifica Password" />
                         <HBox alignment="BOTTOM_RIGHT" spacing="15.0">
                             <children>
-                                <Button fx:id="LogoutButton" mnemonicParsing="false" prefHeight="40.0" style="-fx-background-color: #dc3545; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Logout" onAction="#eseguiLogout" />
+                                <Button fx:id="LogoutButton" mnemonicParsing="false" onAction="#eseguiLogout" prefHeight="40.0" style="-fx-background-color: #dc3545; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Logout" />
                                 <Button prefHeight="40.0" style="-fx-background-color: #28a745; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Modifiche" />
                             </children>
                         </HBox>
