--- a/src/main/resources/com/matteotocci/app/HomePageNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/HomePageNutrizionista.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Priority?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
@@ -18,7 +17,7 @@
 
 <AnchorPane prefHeight="640.0" prefWidth="1000.0" styleClass="main-container" stylesheets="@css/HomePageNutrizionista-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.HomePageNutrizionista">
     <children>
-        <HBox AnchorPane.topAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+        <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
 
                 <!-- SIDEBAR NUTRIZIONISTA -->
@@ -52,11 +51,12 @@
                             <children>
                                 <Button maxWidth="Infinity" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button,nav-button-active" text="👥 Clienti" />
                                 <Button maxWidth="Infinity" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button" text="🥗 Alimenti" />
-                                <Button fx:id="BottoneDieta" maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoDieta" prefHeight="50.0" styleClass="nav-button" text="📋 Diete">
+                                <Button fx:id="BottoneRicette" maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoRicetteNutrizionista" prefHeight="50.0" styleClass="nav-button" text="Ricette">
                                     <cursor>
                                         <Cursor fx:constant="HAND" />
                                     </cursor>
                                 </Button>
+                        <Button layoutX="10.0" layoutY="76.0" maxWidth="Infinity" onAction="#AccessoDieta" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button" text="Diete" />
                             </children>
                         </VBox>
                     </children>
@@ -89,7 +89,7 @@
                             <children>
                                 <TableView fx:id="tabellaClienti" styleClass="clients-table" VBox.vgrow="ALWAYS">
                                     <columnResizePolicy>
-                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                     </columnResizePolicy>
                                     <columns>
                                         <TableColumn fx:id="nomeColonna" text="Nome Cliente" />
@@ -105,4 +105,3 @@
         </HBox>
     </children>
 </AnchorPane>
-
